--- a/PlattformTube/platformio.ini
+++ b/PlattformTube/platformio.ini
@@ -8,10 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+[env:esp32-c3]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32-c3-devkitm-1
 framework = arduino
-lib_deps = 
-	fastled/FastLED@^3.9.19
-	adafruit/Adafruit NeoPixel@^1.15.1
+monitor_speed = 115200
+upload_speed = 921600
+
+build_flags =
+  
+
+lib_deps =
+  fastled/FastLED@^3.5.0
