--- a/PlattformTube/platformio.ini
+++ b/PlattformTube/platformio.ini
@@ -12,6 +12,6 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
-	fastled/FastLED@^3.9.19
 	adafruit/Adafruit NeoPixel@^1.15.1
