--- a/PlattformTube/platformio.ini
+++ b/PlattformTube/platformio.ini
@@ -9,8 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32-devkit-v1
-
+default_envs = esp32-c3
 [env:esp32-c3]
 platform = espressif32
 board = esp32-c3-devkitm-1
@@ -20,7 +19,7 @@ upload_speed = 921600
 build_flags = 
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.15.1
-
+	someweisguy/esp_dmx@^4.1.0
 
 [env:esp32-devkit-v1]
 platform = espressif32
@@ -31,3 +30,4 @@ upload_speed = 921600
 build_flags = 
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.15.1
+	someweisguy/esp_dmx@^4.1.0
