Working on Modes and loop distribution

--- a/PlattformTube/platformio.ini
+++ b/PlattformTube/platformio.ini
@@ -9,7 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32-c3
+default_envs = esp32-devkit-v1
+
 [env:esp32-c3]
 platform = espressif32
 board = esp32-c3-devkitm-1
