--- a/PlattformTube/platformio.ini
+++ b/PlattformTube/platformio.ini
@@ -17,7 +17,9 @@ board = esp32-c3-devkitm-1
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-build_flags = 
+build_flags =
+  -D ARDUINO_USB_MODE=1
+  -D ARDUINO_USB_CDC_ON_BOOT=1
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.15.1
 	someweisguy/esp_dmx@^4.1.0
