--- a/PlattformTube/platformio.ini
+++ b/PlattformTube/platformio.ini
@@ -9,14 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32-devkit-v1
+default_envs = esp32-c3
 
 [env:esp32-c3]
 platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
 monitor_speed = 115200
-upload_speed = 921600
+upload_speed = 115200
 build_flags =
   -D ARDUINO_USB_MODE=1
   -D ARDUINO_USB_CDC_ON_BOOT=1
